Fix odometer wrap

--- a/src/css/imports/style.scss
+++ b/src/css/imports/style.scss
@@ -448,6 +448,7 @@ nav li {
 
 .pricing-range {
     &__odometer-container {
+        white-space: nowrap;
         display: inline-block;
         font-family: 'Ubuntu Mono', monospace;
         font-size: 46px;
